--- a/ExtChanger/src/Main.form
+++ b/ExtChanger/src/Main.form
@@ -1,46 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+  <grid id="27dc6" binding="main" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="600" height="600"/>
     </constraints>
     <properties>
+      <alignmentX value="1.0"/>
+      <alignmentY value="1.0"/>
+      <autoscrolls value="false"/>
       <font name="Arial Black" style="0"/>
-      <minimumSize width="600" height="600"/>
-      <preferredSize width="515" height="300"/>
+      <minimumSize width="200" height="200"/>
+      <preferredSize width="600" height="400"/>
     </properties>
-    <border type="none"/>
+    <border type="none">
+      <font name="Cooper Black"/>
+    </border>
     <children>
-      <component id="e3b0a" class="javax.swing.JLabel">
+      <component id="bb4d9" class="javax.swing.JLabel" binding="word1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="20" bottom="0" right="0" weightx="1.0" weighty="0.5"/>
         </constraints>
         <properties>
-          <text value="Witaj w programie umożliwiającym zmianę rozszerzenia pliku"/>
+          <text value="Wpisz rozszerzenie nie używając kropki:"/>
         </properties>
       </component>
-      <component id="bb4d9" class="javax.swing.JLabel">
+      <component id="e3b0a" class="javax.swing.JLabel" binding="word2">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="3" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.5" weighty="1.0"/>
         </constraints>
         <properties>
-          <text value="Wpisz poniżej rozszerzenie pomijając kropkę:"/>
+          <autoscrolls value="false"/>
+          <focusCycleRoot value="false"/>
+          <focusable value="false"/>
+          <font size="26"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <opaque value="false"/>
+          <text value="Zmień rozszerzenie swojego pliku"/>
+          <verticalAlignment value="0"/>
+          <visible value="true"/>
+        </properties>
+      </component>
+      <component id="6e2e" class="javax.swing.JButton" binding="change">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="50" left="0" bottom="50" right="0" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Zmień"/>
         </properties>
       </component>
       <component id="a7d5" class="javax.swing.JTextField" binding="extensionTextField">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <gridbag top="0" left="0" bottom="0" right="50" weightx="5.0" weighty="0.5"/>
         </constraints>
         <properties>
           <text value=""/>
         </properties>
       </component>
+      <component id="49486" class="javax.swing.JTextField" binding="getPath">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+          <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
+      </component>
       <component id="5545a" class="javax.swing.JButton" binding="fileChooser">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="0" bottom="0" right="50" weightx="2.0" weighty="0.25"/>
         </constraints>
         <properties>
           <text value="Wybierz plik"/>
